// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should click 1`] = `
"<button data-id="sds-button" type="button" class="" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->0
  <!--v-if-->
</button>"
`;

exports[`Button > should match its active snapshot 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="active"
  data-id="sds-button"
  type="button"
>
  
  <!-- @slot Button content. -->
  
  Button active
  
  <!--v-if-->
  
</button>
`;

exports[`Button > should match its block snapshot 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="btn-block sds-theme-plaid:flex sds-theme-plaid:justify-center"
  data-id="sds-button"
  type="button"
>
  
  <!-- @slot Button content. -->
  
  Button block
  
  <!--v-if-->
  
</button>
`;

exports[`Button > should match its default snapshot 1`] = `
"<button data-id="sds-button" type="button" class="" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button
  <!--v-if-->
</button>"
`;

exports[`Button > should match its disabled snapshot 1`] = `
<button
  aria-busy="false"
  aria-disabled="true"
  class="disabled"
  data-id="sds-button"
  disabled=""
  type="button"
>
  
  <!-- @slot Button content. -->
  
  Button disabled
  
  <!--v-if-->
  
</button>
`;

exports[`Button > should match its kind (ghost) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn btn-ghost" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button ghost
  <!--v-if-->
</button>"
`;

exports[`Button > should match its kind (primary) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn btn-primary" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button primary<svg data-id="arrow" class="hidden sds-theme-plaid:!flex w-[13px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13">
    <path d="M13.6875 7.71875L8.6875 12.7188C8.5 12.9062 8.25 13 8 13C7.71875 13 7.46875 12.9062 7.28125 12.7188C6.875 12.3438 6.875 11.6875 7.28125 11.3125L10.5625 8H1C0.4375 8 0 7.5625 0 7C0 6.46875 0.4375 6 1 6H10.5625L7.28125 2.71875C6.875 2.34375 6.875 1.6875 7.28125 1.3125C7.65625 0.90625 8.3125 0.90625 8.6875 1.3125L13.6875 6.3125C14.0938 6.6875 14.0938 7.34375 13.6875 7.71875Z"></path>
  </svg>
</button>"
`;

exports[`Button > should match its kind (secondary) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn btn-secondary" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button secondary<svg data-id="arrow" class="hidden sds-theme-plaid:!flex w-[13px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13">
    <path d="M13.6875 7.71875L8.6875 12.7188C8.5 12.9062 8.25 13 8 13C7.71875 13 7.46875 12.9062 7.28125 12.7188C6.875 12.3438 6.875 11.6875 7.28125 11.3125L10.5625 8H1C0.4375 8 0 7.5625 0 7C0 6.46875 0.4375 6 1 6H10.5625L7.28125 2.71875C6.875 2.34375 6.875 1.6875 7.28125 1.3125C7.65625 0.90625 8.3125 0.90625 8.6875 1.3125L13.6875 6.3125C14.0938 6.6875 14.0938 7.34375 13.6875 7.71875Z"></path>
  </svg>
</button>"
`;

exports[`Button > should match its kind (tertiary) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn btn-tertiary" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button tertiary
  <!--v-if-->
</button>"
`;

exports[`Button > should match its pending snapshot 1`] = `
<button
  aria-busy="true"
  aria-disabled="false"
  class="active active pointer-events-none"
  data-id="sds-button"
  data-pending="true"
  type="button"
>
  <span
    class="relative"
  >
    <span
      class="absolute inset-0 flex items-center justify-center"
    >
      <svg
        class="animate-spin text-current h-4 w-4 sds-theme-plaid:size-6"
        data-id="spinner"
        fill="none"
        role="graphics-symbol"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Pending
        </title>
        <circle
          class="opacity-25 fill-transparent"
          cx="12"
          cy="12"
          r="10"
          stroke="currentColor"
          stroke-width="4"
        />
        <path
          class="opacity-75"
          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="opacity-0"
    >
      <!-- @slot Action Button content. -->
      
      
    </span>
  </span>
</button>
`;

exports[`Button > should match its size (lg) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-lg" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button lg
  <!--v-if-->
</button>"
`;

exports[`Button > should match its size (md) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button md
  <!--v-if-->
</button>"
`;

exports[`Button > should match its size (sm) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-sm" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button sm
  <!--v-if-->
</button>"
`;

exports[`Button > should match its size (xs) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-xs" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button xs
  <!--v-if-->
</button>"
`;

exports[`Button > should match its type (button) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button button
  <!--v-if-->
</button>"
`;

exports[`Button > should match its type (submit) snapshot 1`] = `
"<button data-id="sds-button" type="submit" class="" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button submit
  <!--v-if-->
</button>"
`;

exports[`Button > should match its variant (blue) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-blue" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button blue
  <!--v-if-->
</button>"
`;

exports[`Button > should match its variant (red) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-red" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button red
  <!--v-if-->
</button>"
`;

exports[`Button > should match its variant (white) snapshot 1`] = `
"<button data-id="sds-button" type="button" class="btn-white" aria-disabled="false" aria-busy="false">
  <!-- @slot Button content. -->Button white
  <!--v-if-->
</button>"
`;
